# mini-telemetry-dds

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/monitor/: CMakeLists.txt  main.cpp
apps/sensor_hub/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/include/core/: channel.hpp  logger.hpp  telemetry.hpp  telemetry_serializer.hpp
core/proto/: telemetry.proto
core/src/: logger.cpp  telemetry_serializer.cpp
dds_io/: CMakeLists.txt
dds_io/generated_c/: telemetry.c  telemetry.h
dds_io/idl/: telemetry.idl
dds_io/include/dds_io/: dds_participant.hpp  dds_publisher.hpp  dds_subscriber.hpp
dds_io/src/: dds_participant.cpp  dds_publisher.cpp  dds_subscriber.cpp
tests/: CMakeLists.txt  channel_test.cpp  telemetry_serializer_test.cpp
